# matrix-rust-sdk

./: .gitignore  Cargo.toml  bindings.json  crates.js  index.html  search-index.js  settings.html  source-files.js  tarpaulin.toml
benchmarks/: Cargo.toml
matrix_crypto_ffi/: all.html  enum.CryptoStoreError.html  enum.DecodeError.html  enum.DecryptionError.html  enum.KeyImportError.html  enum.MigrationError.html  enum.OutgoingVerificationRequest.html  enum.PkDecryptionError.html  enum.Request.html  enum.RequestType.html  enum.SecretImportError.html  enum.SignatureError.html  enum.UserIdentity.html  enum.Verification.html  fn.ffi_olm_1b6_rustbuffer_alloc.html  fn.ffi_olm_1b6_rustbuffer_free.html  fn.ffi_olm_1b6_rustbuffer_from_bytes.html  fn.ffi_olm_1b6_rustbuffer_reserve.html  fn.migrate.html  fn.set_logger.html  index.html  macro.uniffi_reexport_scaffolding.html  sidebar-items.js  struct.BackupKeys.html  struct.BackupRecoveryKey.html  struct.BootstrapCrossSigningResult.html  struct.CancelInfo.html  struct.ConfirmVerificationResult.html  struct.CrossSigningKeyExport.html  struct.CrossSigningStatus.html  struct.DecryptedEvent.html  struct.Device.html  struct.DeviceLists.html  struct.KeyRequestPair.html  struct.KeysImportResult.html  struct.MegolmV1BackupKey.html  struct.MigrationData.html  struct.OlmMachine.html  struct.PassphraseInfo.html  struct.PickledAccount.html  (+13 more)
matrix_sdk/: all.html  attr.async_trait.html  enum.ClientBuildError.html  enum.DisplayName.html  enum.Error.html  enum.HttpError.html  enum.ImageError.html  enum.LoopCtrl.html  enum.RoomType.html  (+19 more)
(+972 files in other folders)
